Bug 1007576 - [bluez] Update CoD value after device found while doing NFC pairing, r=echou